--- a/APS2.ipynb
+++ b/APS2.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -150,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -159,7 +159,7 @@
        "285.74762842427623"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -197,33 +197,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "0.035"
-      ]
-     },
-     "execution_count": 51,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Potência máxima permitida para este microprocessador: 0.035\n",
+      "Potência máxima permitida (hdi coeficiente de conveccao) 0.399736925\n"
+     ]
     }
    ],
    "source": [
     "# Definindo os parâmetros fornecidos\n",
-    "h_ar = 20  # Coeficiente de convecção para o ar (W/m²K)\n",
-    "T_chip_max = 85 + 273.15  # Temperatura máxima do chip em Kelvin\n",
-    "T_ambiente_ar = 15 + 273.15  # Temperatura do refrigerante (ar) em Kelvin\n",
-    "w = 5e-3  # Largura do microprocessador em metros\n",
+    "h_ar = 20  \n",
+    "T_chip_max = 85 + 273  \n",
+    "T_ambiente_ar = 15 + 273  \n",
+    "w = 5e-3 \n",
     "\n",
-    "# Área da superfície frontal do microprocessador (m²)\n",
     "A = w**2\n",
     "\n",
-    "# Calculando a potência máxima permitida com ar como refrigerante\n",
     "P_max_ar = h_ar * A * (T_chip_max - T_ambiente_ar)\n",
-    "P_max_ar\n"
+    "print(\"Potência máxima permitida para este microprocessador:\", P_max_ar)\n",
+    "\n",
+    "hdi = 228.4211 \n",
+    "P_max_hdi = hdi * A * (T_chip_max - T_ambiente_ar)\n",
+    "\n",
+    "print(\"Potência máxima permitida (hdi coeficiente de conveccao)\", P_max_hdi)\n",
+    "\n"
    ]
   },
   {
@@ -235,16 +237,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_44652/3487937575.py:21: DeprecationWarning: 'scipy.integrate.simps' is deprecated in favour of 'scipy.integrate.simpson' and will be removed in SciPy 1.14.0\n",
+      "/tmp/ipykernel_212424/3487937575.py:21: DeprecationWarning: 'scipy.integrate.simps' is deprecated in favour of 'scipy.integrate.simpson' and will be removed in SciPy 1.14.0\n",
       "  Q_total = integrate.simps(q_t(tempo), tempo)\n",
-      "/tmp/ipykernel_44652/3487937575.py:22: DeprecationWarning: 'scipy.integrate.simps' is deprecated in favour of 'scipy.integrate.simpson' and will be removed in SciPy 1.14.0\n",
+      "/tmp/ipykernel_212424/3487937575.py:22: DeprecationWarning: 'scipy.integrate.simps' is deprecated in favour of 'scipy.integrate.simpson' and will be removed in SciPy 1.14.0\n",
       "  W_total = integrate.simps(w_t(tempo), tempo)\n"
      ]
     },
@@ -258,7 +260,7 @@
        " 4439999.999999999)"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -292,6 +294,60 @@
     "\n",
     "# Retornando os polinômios e o valor de Δu\n",
     "polinomio_calor, polinomio_trabalho, Q_total, W_total, delta_u\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Delta U = 4440000.00 J\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/tmp/ipykernel_212424/2920160024.py:22: DeprecationWarning: 'scipy.integrate.simps' is deprecated in favour of 'scipy.integrate.simpson' and will be removed in SciPy 1.14.0\n",
+      "  q_integral = simps(q_values_at_times, times)\n",
+      "/tmp/ipykernel_212424/2920160024.py:23: DeprecationWarning: 'scipy.integrate.simps' is deprecated in favour of 'scipy.integrate.simpson' and will be removed in SciPy 1.14.0\n",
+      "  w_integral = simps(w_values_at_times, times)\n"
+     ]
+    }
+   ],
+   "source": [
+    "from scipy.integrate import simps\n",
+    "\n",
+    "def interpolacao_lagrange(x, x0, x1, x2, fx0, fx1, fx2):\n",
+    "    fx = (fx0 * (x - x1) * (x - x2) / ((x0 - x1) * (x0 - x2)) +\n",
+    "          fx1 * (x - x0) * (x - x2) / ((x1 - x0) * (x1 - x2)) +\n",
+    "          fx2 * (x - x0) * (x - x1) / ((x2 - x0) * (x2 - x1)))\n",
+    "    return fx\n",
+    "\n",
+    "# Dados do problema\n",
+    "t_values = [0, 1800, 3600]\n",
+    "q_values = [1500, 1800, 1200]\n",
+    "w_values = [300, 450, 400]\n",
+    "\n",
+    "# Interpolação de Lagrange para q(t) e w(t)\n",
+    "q_func = lambda t: interpolacao_lagrange(t, t_values[0], t_values[1], t_values[2], q_values[0], q_values[1], q_values[2])\n",
+    "w_func = lambda t: interpolacao_lagrange(t, t_values[0], t_values[1], t_values[2], w_values[0], w_values[1], w_values[2])\n",
+    "\n",
+    "# Integração numérica de Simpson 1/3\n",
+    "times = [i * 600 for i in range(7)]  \n",
+    "q_values_at_times = [q_func(t) for t in times]  \n",
+    "w_values_at_times = [w_func(t) for t in times] \n",
+    "q_integral = simps(q_values_at_times, times)\n",
+    "w_integral = simps(w_values_at_times, times)\n",
+    "\n",
+    "# Cálculo da variação da energia interna\n",
+    "delta_u = q_integral - w_integral\n",
+    "\n",
+    "print(f\"Delta U = {delta_u:.2f} J\")\n"
    ]
   },
   {
