--- a/APS2.ipynb
+++ b/APS2.ipynb
@@ -197,15 +197,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Potência máxima permitida para este microprocessador: 0.035\n",
-      "Potência máxima permitida (hdi coeficiente de conveccao) 0.399736925\n"
+      "Potência máxima permitida para este microprocessador em W: 0.035\n",
+      "Potência máxima permitida (hdi coeficiente de conveccao) em W 0.399736925\n"
      ]
     }
    ],
@@ -219,12 +219,12 @@
     "A = w**2\n",
     "\n",
     "P_max_ar = h_ar * A * (T_chip_max - T_ambiente_ar)\n",
-    "print(\"Potência máxima permitida para este microprocessador:\", P_max_ar)\n",
+    "print(\"Potência máxima permitida para este microprocessador em W:\", P_max_ar)\n",
     "\n",
     "hdi = 228.4211 \n",
     "P_max_hdi = hdi * A * (T_chip_max - T_ambiente_ar)\n",
     "\n",
-    "print(\"Potência máxima permitida (hdi coeficiente de conveccao)\", P_max_hdi)\n",
+    "print(\"Potência máxima permitida (hdi coeficiente de conveccao) em W\", P_max_hdi)\n",
     "\n"
    ]
   },
@@ -237,85 +237,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/tmp/ipykernel_212424/3487937575.py:21: DeprecationWarning: 'scipy.integrate.simps' is deprecated in favour of 'scipy.integrate.simpson' and will be removed in SciPy 1.14.0\n",
-      "  Q_total = integrate.simps(q_t(tempo), tempo)\n",
-      "/tmp/ipykernel_212424/3487937575.py:22: DeprecationWarning: 'scipy.integrate.simps' is deprecated in favour of 'scipy.integrate.simpson' and will be removed in SciPy 1.14.0\n",
-      "  W_total = integrate.simps(w_t(tempo), tempo)\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "(array([-1.38888889e-04,  4.16666667e-01,  1.50000000e+03]),\n",
-       " array([-3.08641975e-05,  1.38888889e-01,  3.00000000e+02]),\n",
-       " 5939999.999999999,\n",
-       " 1499999.9999999998,\n",
-       " 4439999.999999999)"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "import numpy as np\n",
-    "import scipy.integrate as integrate\n",
-    "import matplotlib.pyplot as plt\n",
-    "\n",
-    "# Dados fornecidos\n",
-    "tempo = np.array([0, 1800, 3600])  # tempo em segundos\n",
-    "taxa_calor = np.array([1500, 1800, 1200])  # taxa de transferência de calor em Watts\n",
-    "trabalho = np.array([300, 450, 400])  # trabalho em Watts\n",
-    "\n",
-    "# Interpolação de Lagrange para taxa de transferência de calor q(t) e trabalho w(t)\n",
-    "# Numpy já possui uma função para interpolação de Lagrange\n",
-    "polinomio_calor = np.polyfit(tempo, taxa_calor, 2)  # interpolação quadrática\n",
-    "polinomio_trabalho = np.polyfit(tempo, trabalho, 2)  # interpolação quadrática\n",
-    "\n",
-    "# Função para calcular q(t) e w(t) dados os coeficientes dos polinômios\n",
-    "q_t = np.poly1d(polinomio_calor)\n",
-    "w_t = np.poly1d(polinomio_trabalho)\n",
-    "\n",
-    "# Integração numérica usando a regra de Simpson 1/3\n",
-    "# A integração será feita de 0 a 3600 segundos (1 hora)\n",
-    "Q_total = integrate.simps(q_t(tempo), tempo)\n",
-    "W_total = integrate.simps(w_t(tempo), tempo)\n",
-    "\n",
-    "# Calculando a variação da energia interna Δu = Q - W\n",
-    "delta_u = Q_total - W_total\n",
-    "\n",
-    "# Retornando os polinômios e o valor de Δu\n",
-    "polinomio_calor, polinomio_trabalho, Q_total, W_total, delta_u\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Delta U = 4440000.00 J\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/tmp/ipykernel_212424/2920160024.py:22: DeprecationWarning: 'scipy.integrate.simps' is deprecated in favour of 'scipy.integrate.simpson' and will be removed in SciPy 1.14.0\n",
-      "  q_integral = simps(q_values_at_times, times)\n",
-      "/tmp/ipykernel_212424/2920160024.py:23: DeprecationWarning: 'scipy.integrate.simps' is deprecated in favour of 'scipy.integrate.simpson' and will be removed in SciPy 1.14.0\n",
-      "  w_integral = simps(w_values_at_times, times)\n"
+      "1744.4444444444446 456.17283950617286\n",
+      "1744.4444444444446 456.17283950617286\n",
+      "Delta U = 1288.27 J\n"
      ]
     }
    ],
@@ -334,18 +265,25 @@
     "w_values = [300, 450, 400]\n",
     "\n",
     "# Interpolação de Lagrange para q(t) e w(t)\n",
-    "q_func = lambda t: interpolacao_lagrange(t, t_values[0], t_values[1], t_values[2], q_values[0], q_values[1], q_values[2])\n",
-    "w_func = lambda t: interpolacao_lagrange(t, t_values[0], t_values[1], t_values[2], w_values[0], w_values[1], w_values[2])\n",
+    "q_func = interpolacao_lagrange(2200, t_values[0], t_values[1], t_values[2], q_values[0], q_values[1], q_values[2])\n",
+    "w_func = interpolacao_lagrange(2200, t_values[0], t_values[1], t_values[2], w_values[0], w_values[1], w_values[2])\n",
     "\n",
+    "\n",
+    "print(q_func, w_func)\n",
     "# Integração numérica de Simpson 1/3\n",
-    "times = [i * 600 for i in range(7)]  \n",
-    "q_values_at_times = [q_func(t) for t in times]  \n",
-    "w_values_at_times = [w_func(t) for t in times] \n",
-    "q_integral = simps(q_values_at_times, times)\n",
-    "w_integral = simps(w_values_at_times, times)\n",
+    "# times = [i * 600 for i in range(7)]  \n",
+    "# # q_values_at_times = [q_func(t) for t in times]  \n",
+    "# # w_values_at_times = [w_func(t) for t in times] \n",
+    "# q_integral = simps(q_func, times)\n",
+    "# w_integral = simps(w_func, times)\n",
     "\n",
-    "# Cálculo da variação da energia interna\n",
-    "delta_u = q_integral - w_integral\n",
+    "# # Cálculo da variação da energia interna\n",
+    "q_func = interpolacao_lagrange(2200, t_values[0], t_values[1], t_values[2], q_values[0], q_values[1], q_values[2])\n",
+    "w_func = interpolacao_lagrange(2200, t_values[0], t_values[1], t_values[2], w_values[0], w_values[1], w_values[2])\n",
+    "\n",
+    "print(q_func, w_func)\n",
+    "\n",
+    "delta_u = q_func - w_func\n",
     "\n",
     "print(f\"Delta U = {delta_u:.2f} J\")\n"
    ]
@@ -355,7 +293,10 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
