--- a/APS2.ipynb
+++ b/APS2.ipynb
@@ -237,27 +237,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1744.4444444444446 456.17283950617286\n",
-      "1744.4444444444446 456.17283950617286\n",
-      "Delta U = 1288.27 J\n"
+     "ename": "NameError",
+     "evalue": "name 'np' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[5], line 50\u001b[0m\n\u001b[1;32m     40\u001b[0m w_values \u001b[38;5;241m=\u001b[39m [\u001b[38;5;241m300\u001b[39m, \u001b[38;5;241m450\u001b[39m, \u001b[38;5;241m400\u001b[39m]\n\u001b[1;32m     42\u001b[0m \u001b[38;5;66;03m# Interpolação de Lagrange para q(t) e w(t)\u001b[39;00m\n\u001b[1;32m     43\u001b[0m \u001b[38;5;66;03m# q_func = interpolacao_lagrange(2200, t_values[0], t_values[1], t_values[2], q_values[0], q_values[1], q_values[2])\u001b[39;00m\n\u001b[1;32m     44\u001b[0m \u001b[38;5;66;03m# w_func = interpolacao_lagrange(2200, t_values[0], t_values[1], t_values[2], w_values[0], w_values[1], w_values[2])\u001b[39;00m\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m     48\u001b[0m \n\u001b[1;32m     49\u001b[0m \u001b[38;5;66;03m# # Cálculo da variação da energia interna\u001b[39;00m\n\u001b[0;32m---> 50\u001b[0m q_func_simp \u001b[38;5;241m=\u001b[39m \u001b[43msimpson_umterco\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m0\u001b[39;49m\u001b[43m,\u001b[49m\u001b[38;5;241;43m2200\u001b[39;49m\u001b[43m,\u001b[49m\u001b[38;5;241;43m100\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43mt_values\u001b[49m\u001b[43m,\u001b[49m\u001b[43mq_values\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     51\u001b[0m w_func_simp\u001b[38;5;241m=\u001b[39m simpson_umterco(\u001b[38;5;241m0\u001b[39m,\u001b[38;5;241m2200\u001b[39m,\u001b[38;5;241m100\u001b[39m,t_values,w_values)\n\u001b[1;32m     53\u001b[0m \u001b[38;5;66;03m# print(q_func, w_func)\u001b[39;00m\n",
+      "Cell \u001b[0;32mIn[5], line 21\u001b[0m, in \u001b[0;36msimpson_umterco\u001b[0;34m(a, b, n, t_valu, valu)\u001b[0m\n\u001b[1;32m     20\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21msimpson_umterco\u001b[39m(a, b, n,t_valu, valu):\n\u001b[0;32m---> 21\u001b[0m     valores \u001b[38;5;241m=\u001b[39m \u001b[43mnp\u001b[49m\u001b[38;5;241m.\u001b[39mlinspace(a, b, n \u001b[38;5;241m+\u001b[39m \u001b[38;5;241m1\u001b[39m)\n\u001b[1;32m     23\u001b[0m     largura \u001b[38;5;241m=\u001b[39m b \u001b[38;5;241m-\u001b[39m a\n\u001b[1;32m     25\u001b[0m     somatoria_i \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m0\u001b[39m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'np' is not defined"
      ]
     }
    ],
    "source": [
-    "from scipy.integrate import simps\n",
+    "# from scipy.integrate import simps\n",
+    "import numpy as np\n",
     "\n",
-    "def interpolacao_lagrange(x, x0, x1, x2, fx0, fx1, fx2):\n",
-    "    fx = (fx0 * (x - x1) * (x - x2) / ((x0 - x1) * (x0 - x2)) +\n",
-    "          fx1 * (x - x0) * (x - x2) / ((x1 - x0) * (x1 - x2)) +\n",
-    "          fx2 * (x - x0) * (x - x1) / ((x2 - x0) * (x2 - x1)))\n",
-    "    return fx\n",
+    "# def interpolacao_lagrange(x, x0, x1, x2, fx0, fx1, fx2):\n",
+    "#     fx = (fx0 * (x - x1) * (x - x2) / ((x0 - x1) * (x0 - x2)) +\n",
+    "#           fx1 * (x - x0) * (x - x2) / ((x1 - x0) * (x1 - x2)) +\n",
+    "#           fx2 * (x - x0) * (x - x1) / ((x2 - x0) * (x2 - x1)))\n",
+    "#     return fx\n",
+    "\n",
+    "def lagrange(ti, qi, t_target):\n",
+    "    n = len(ti)\n",
+    "    L = 0\n",
+    "    for i in range(n):\n",
+    "        l = 1\n",
+    "        for j in range(n):\n",
+    "            if j != i:\n",
+    "                l *= (t_target - ti[j]) / (ti[i] - ti[j])\n",
+    "        L += qi[i] * l\n",
+    "    return L\n",
+    "\n",
+    "def simpson_umterco(a, b, n,t_valu, valu):\n",
+    "    valores = np.linspace(a, b, n + 1)\n",
+    "\n",
+    "    largura = b - a\n",
+    "\n",
+    "    somatoria_i = 0\n",
+    "    for i in range(1, len(valores) - 1, 2):\n",
+    "        somatoria_i += lagrange(t_valu,valu,valores[i])\n",
+    "\n",
+    "    somatoria_j = 0\n",
+    "    for j in range(2, len(valores) - 2, 2):\n",
+    "        somatoria_j += lagrange(t_valu,valu,valores[j])\n",
+    "\n",
+    "    altura_media = (lagrange(t_valu,valu,a) + 4*somatoria_i + 2*somatoria_j + lagrange(t_valu,valu,b))/(3 * n)\n",
+    "\n",
+    "    return largura * altura_media\n",
     "\n",
     "# Dados do problema\n",
     "t_values = [0, 1800, 3600]\n",
@@ -265,25 +297,19 @@
     "w_values = [300, 450, 400]\n",
     "\n",
     "# Interpolação de Lagrange para q(t) e w(t)\n",
-    "q_func = interpolacao_lagrange(2200, t_values[0], t_values[1], t_values[2], q_values[0], q_values[1], q_values[2])\n",
-    "w_func = interpolacao_lagrange(2200, t_values[0], t_values[1], t_values[2], w_values[0], w_values[1], w_values[2])\n",
+    "# q_func = interpolacao_lagrange(2200, t_values[0], t_values[1], t_values[2], q_values[0], q_values[1], q_values[2])\n",
+    "# w_func = interpolacao_lagrange(2200, t_values[0], t_values[1], t_values[2], w_values[0], w_values[1], w_values[2])\n",
     "\n",
     "\n",
-    "print(q_func, w_func)\n",
-    "# Integração numérica de Simpson 1/3\n",
-    "# times = [i * 600 for i in range(7)]  \n",
-    "# # q_values_at_times = [q_func(t) for t in times]  \n",
-    "# # w_values_at_times = [w_func(t) for t in times] \n",
-    "# q_integral = simps(q_func, times)\n",
-    "# w_integral = simps(w_func, times)\n",
+    "# print(q_func, w_func)\n",
     "\n",
     "# # Cálculo da variação da energia interna\n",
-    "q_func = interpolacao_lagrange(2200, t_values[0], t_values[1], t_values[2], q_values[0], q_values[1], q_values[2])\n",
-    "w_func = interpolacao_lagrange(2200, t_values[0], t_values[1], t_values[2], w_values[0], w_values[1], w_values[2])\n",
+    "q_func_simp = simpson_umterco(0,2200,100,t_values,q_values)\n",
+    "w_func_simp= simpson_umterco(0,2200,100,t_values,w_values)\n",
     "\n",
-    "print(q_func, w_func)\n",
+    "# print(q_func, w_func)\n",
     "\n",
-    "delta_u = q_func - w_func\n",
+    "delta_u = q_func_simp - w_func_simp\n",
     "\n",
     "print(f\"Delta U = {delta_u:.2f} J\")\n"
    ]
