--- a/APS2.ipynb
+++ b/APS2.ipynb
@@ -237,19 +237,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'np' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[5], line 50\u001b[0m\n\u001b[1;32m     40\u001b[0m w_values \u001b[38;5;241m=\u001b[39m [\u001b[38;5;241m300\u001b[39m, \u001b[38;5;241m450\u001b[39m, \u001b[38;5;241m400\u001b[39m]\n\u001b[1;32m     42\u001b[0m \u001b[38;5;66;03m# Interpolação de Lagrange para q(t) e w(t)\u001b[39;00m\n\u001b[1;32m     43\u001b[0m \u001b[38;5;66;03m# q_func = interpolacao_lagrange(2200, t_values[0], t_values[1], t_values[2], q_values[0], q_values[1], q_values[2])\u001b[39;00m\n\u001b[1;32m     44\u001b[0m \u001b[38;5;66;03m# w_func = interpolacao_lagrange(2200, t_values[0], t_values[1], t_values[2], w_values[0], w_values[1], w_values[2])\u001b[39;00m\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m     48\u001b[0m \n\u001b[1;32m     49\u001b[0m \u001b[38;5;66;03m# # Cálculo da variação da energia interna\u001b[39;00m\n\u001b[0;32m---> 50\u001b[0m q_func_simp \u001b[38;5;241m=\u001b[39m \u001b[43msimpson_umterco\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m0\u001b[39;49m\u001b[43m,\u001b[49m\u001b[38;5;241;43m2200\u001b[39;49m\u001b[43m,\u001b[49m\u001b[38;5;241;43m100\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43mt_values\u001b[49m\u001b[43m,\u001b[49m\u001b[43mq_values\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     51\u001b[0m w_func_simp\u001b[38;5;241m=\u001b[39m simpson_umterco(\u001b[38;5;241m0\u001b[39m,\u001b[38;5;241m2200\u001b[39m,\u001b[38;5;241m100\u001b[39m,t_values,w_values)\n\u001b[1;32m     53\u001b[0m \u001b[38;5;66;03m# print(q_func, w_func)\u001b[39;00m\n",
-      "Cell \u001b[0;32mIn[5], line 21\u001b[0m, in \u001b[0;36msimpson_umterco\u001b[0;34m(a, b, n, t_valu, valu)\u001b[0m\n\u001b[1;32m     20\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21msimpson_umterco\u001b[39m(a, b, n,t_valu, valu):\n\u001b[0;32m---> 21\u001b[0m     valores \u001b[38;5;241m=\u001b[39m \u001b[43mnp\u001b[49m\u001b[38;5;241m.\u001b[39mlinspace(a, b, n \u001b[38;5;241m+\u001b[39m \u001b[38;5;241m1\u001b[39m)\n\u001b[1;32m     23\u001b[0m     largura \u001b[38;5;241m=\u001b[39m b \u001b[38;5;241m-\u001b[39m a\n\u001b[1;32m     25\u001b[0m     somatoria_i \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m0\u001b[39m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'np' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Delta U = 2928806.58 J\n"
      ]
     }
    ],
