respostas com equação

--- a/APS2 copy.ipynb
+++ b/APS2 copy.ipynb
@@ -37,11 +37,24 @@
    "metadata": {},
    "source": [
     "## RESPOSTA\n",
-    "A taxa de variação considerando a conveccao é :**-00026655633224196124**\n",
+    "A taxa de variação considerando a conveccao é :**0.07196860689242891**\n",
     "\n",
-    "a taxa de variação temperatura na placa quando não consideramos a convecção é : **-0.0038890743095482765**\n",
+    "a taxa de variação temperatura na placa quando não consideramos a convecção é : **0.08420371676371556**\n",
     "\n",
-    "O equacionamento foi feito da seguinte forma:\n"
+    "**Discussão**:\n",
+    "\n",
+    "Como a convecção é desconsiderada, um dos fluxos de energia para fora da placa é menor, o que resultaria em uma maior taxa de variação de temperatura. Essá logica condiz com o sresultados obtidos no exercício\n",
+    "\n",
+    "O equacionamento desenvolvido ficou da seguinte forma:\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\\begin{equation}\n",
+    "mc\\frac{dT}{\\text{dt}} = \\alpha G - E\\sigma T_s^{4} - h (T_s - T_{\\infty})\n",
+    "\\end{equation}\n"
    ]
   },
   {
