--- a/APS2.ipynb
+++ b/APS2.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,9 +17,9 @@
     "c = 840\n",
     "hdi = 228.4211\n",
     "t = 2200\n",
-    "espessura = 3.5 *10e-3\n",
+    "espessura = 0.0035\n",
     "e = 0.25\n",
-    "sigma = 5.67 * 10e-8\n",
+    "sigma = 5.67 * 10**(-8)\n",
     "alfa = 0.8\n",
     "\n",
     "t_placa = 25 + 273"
@@ -34,13 +34,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
     "fluxo_radiacao = 1000\n",
     "coeficiente_conveccao = 20\n",
-    "t_ar = 20 + 273"
+    "t_ar = 20 +273"
    ]
   },
   {
@@ -55,8 +55,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\\begin{equation}\n",
+    "mc\\frac{dT}{\\text{dt}} = \\alpha G - E\\sigma T_s^{4} - h (T_s - T_{\\infty})\n",
+    "\\end{equation}\n"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -71,7 +80,7 @@
     {
      "data": {
       "text/plain": [
-       "1117.8618214679998"
+       "111.7861821468"
       ]
      },
      "metadata": {},
@@ -80,7 +89,7 @@
     {
      "data": {
       "text/plain": [
-       "-0.0026655633224196124"
+       "0.07196860689242891"
       ]
      },
      "metadata": {},
@@ -89,7 +98,7 @@
     {
      "data": {
       "text/plain": [
-       "-0.0038890743095482765"
+       "0.08420371676371556"
       ]
      },
      "metadata": {},
@@ -107,8 +116,8 @@
     "fluxo_conveccao = coeficiente_conveccao*(t_placa - t_ar)\n",
     "fluxo_radiacao2 = e * sigma * t_placa**4\n",
     "\n",
-    "taxa_temp = (alfa*fluxo_radiacao - (fluxo_radiacao2 - fluxo_conveccao))/ (p * c * espessura)\n",
-    "taxa_temp_sem_conveccao = (alfa*fluxo_radiacao - (fluxo_radiacao2 - 0))/ (p * c * espessura)\n",
+    "taxa_temp = (alfa*fluxo_radiacao - fluxo_radiacao2 - fluxo_conveccao)/ (p * c * espessura)\n",
+    "taxa_temp_sem_conveccao = (alfa*fluxo_radiacao - fluxo_radiacao2 - 0)/ (p * c * espessura)\n",
     "\n",
     "display(fluxo_conveccao, fluxo_radiacao2, taxa_temp, taxa_temp_sem_conveccao)\n",
     "print(\"discutido\")"
@@ -126,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -150,18 +159,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "285.74762842427623"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'scipy'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[21], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mscipy\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01moptimize\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m fsolve\n\u001b[1;32m      2\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mnumpy\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mnp\u001b[39;00m\n\u001b[1;32m      5\u001b[0m \u001b[38;5;66;03m# Equação de balanço de energia para a temperatura superficial da placa (Ts)\u001b[39;00m\n",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'scipy'"
+     ]
     }
    ],
    "source": [
@@ -197,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -237,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
